--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,7 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.3",
-        "mockery/mockery": "^1.2",
-        "phpunit/phpunit": "~5"
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
@@ -24,5 +22,9 @@
                 "Finecho\\LogisticsInquiry\\ServiceProvider"
             ]
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~5",
+        "mockery/mockery": "^1.2"
     }
 }
